01-Fix overflow on mobile and modified scss structure on dialog component

--- a/src/app/user/dialog/dialog.component.scss
+++ b/src/app/user/dialog/dialog.component.scss
@@ -1,22 +1,25 @@
-.speakerCard {
-  margin: 10px auto;
-}
-
 .videoContainer{
   text-align: center;
-}
-video {
-  width: 80%;
-}
-
-.cust {
-  background-color: #EE6EFF;
-  color: white;
+  video {
+    width: 95%;
+  }
 }
 
-.rep {
-  background-color: #00A7D1;
-  color: white;
+.speakerCard {
+  margin: 10px auto;
+  .cust {
+    background-color: #EE6EFF;
+    color: white;
+  }
+
+  .rep {
+    background-color: #00A7D1;
+    color: white;
+  }
+
+  .snippet{
+    white-space: initial !important;
+  }
 }
 
 p {
